--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-
+apply plugin: "kotlin-kapt"
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.jbyron.weatherapp"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -24,10 +23,41 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // Dagger
+    api "com.google.dagger:dagger-android-support:2.13"
+    kapt "com.google.dagger:dagger-android-processor:2.13"
+    kapt "com.google.dagger:dagger-compiler:2.13"
+
+    // RxKotlin
+    api "io.reactivex.rxjava2:rxkotlin:2.2.0"
+    api "io.reactivex.rxjava2:rxandroid:2.0.2"
+    api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1"
+
+    // Retrofit & OkHttp
+    api "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    api "com.squareup.retrofit2:converter-jackson:2.3.0"
+    api "com.squareup.okhttp3:logging-interceptor:3.9.0"
+
+    // Glide
+    api ("com.github.bumptech.glide:glide:4.8.0") {
+        exclude group: "com.android.support"
+    }
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+
+    // Dropdown
+    api 'com.jaredrummler:material-spinner:1.2.5'
+
+    // Timber- Log
+    api "com.jakewharton.timber:timber:4.7.1"
 }
